# gitbit

./: .coverage 2  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  repos.example.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
gitbit/: __init__.py  __main__.py  auth.py  cli.py  config.py  exceptions.py  git_ops.py  state.py  sync.py
src/git_mirror/: __init__.py  auth.py  cli.py  config.py  exceptions.py  git_ops.py  sync.py
src/gitbit/: auth.py  cli.py
tests/: conftest.py  test___main__.py  test_auth.py  test_cli.py  test_config.py  test_git_ops.py  test_state.py  test_sync.py
