[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitbit"
version = "0.1.0"
description = "A production-ready CLI for mirroring Git repositories with full ref fidelity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Siyam Sarker", email = "siyam.ts@gmail.com"}]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "flake8>=6.1",
    "black>=23.12",
    "isort>=5.13",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
gitbit = "gitbit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gitbit --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
